# surgvu26-vqa

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: build-container.yml
container/: Dockerfile  do_build.sh  do_test_run.sh  inference.py  requirements.txt
container/test/input/interf0/: inputs.json  visual-context-question.json
data/: download_samples.sh
docs/: BASELINES.md
docs/superpowers/plans/: 2026-06-09-surgvu26-vqa-m0-foundation.md  2026-06-10-surgvu26-vqa-m1-baseline-container.md  2026-06-12-surgvu26-vqa-m2-finetune.md
docs/superpowers/specs/: 2026-06-09-surgvu26-vqa-design.md
hpc/: build_sif.sh  build_sif.sub  eval_samples.sh  eval_samples.sub  fetch_sif.sh  fetch_weights.sh  rehearse_container.sh  rehearse_container.sub
scripts/: make_dummy_fixture.py  make_real_fixture.sh  predict_samples.py
surgvu_vqa/data/: public_samples.py
surgvu_vqa/eval/: bleu.py  score.py
surgvu_vqa/predict/: answer.py  frames.py  model.py
tests/: test_smoke.py
tests/container/: test_inference_io.py
tests/data/: test_public_samples.py
tests/eval/: test_bleu.py  test_score.py
tests/predict/: test_answer.py  test_frames.py  test_model.py
